No structural changes -- just changed javadocs & formatting